# Curso_de_Python_do_Basico_Ao_Avancado

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
configuracoes/: index.html
conteudo/: index.html
curso_de_python_do_basico_ao_avancado/: README.md
curso_de_python_do_basico_ao_avancado/Secao_5/Secao_5_aula_257_264/: pessoa.py
curso_de_python_do_basico_ao_avancado/Secao_5_aula_257_264/: README.md  banco.py  conta.py  pessoa.py
curso_de_python_do_basico_ao_avancado/Secao_6_aula_301_302/: enviar_email.py
curso_de_python_do_basico_ao_avancado/Secao_6_aula_310/: README.md
curso_de_python_do_basico_ao_avancado/Secao_6_aula_316_319/: README.md  main_aulas.py
curso_de_python_do_basico_ao_avancado/Secao_6_aula_323/: README.md  test_Jupter.ipynb
curso_de_python_do_basico_ao_avancado/Secao_6_aula_324_326/: README.md  threads_aula_324_326.py
curso_de_python_do_basico_ao_avancado/Secao_6_aula_325/: README.md
curso_de_python_do_basico_ao_avancado/Secao_6_aula_328_330/: README.md
curso_de_python_do_basico_ao_avancado/Secao_7/: README.md  buttons.py  calculadora.py  display.py  info.py  main_window.py  styles.py  utils.py  variables.py
curso_de_python_do_basico_ao_avancado/Secao_8/: .env-example  README.md  docker-compose.yml
curso_de_python_do_basico_ao_avancado/Secao_9/: README.md
docs/: configuracoes.md  conteudo.md  index.md  introduction.md  question.md  tecnologias.md
introduction/: index.html
question/: index.html
search/: search_index.json
tecnologias/: index.html
(+33 files in other folders)
